--- a/css/style_index.css
+++ b/css/style_index.css
@@ -135,7 +135,7 @@ footer small {
 }
 
 #index {
-  background-image: url(../images/index_bg2.jpg);
+  background-image: url(../images/index_bg.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
