--- a/css/style_index.css
+++ b/css/style_index.css
@@ -153,7 +153,7 @@ footer small {
 /* ---------------- メディアクエリ -------------------- */
 
 @media screen and (max-width:1000px) { 
-  /*　画面サイズが640pxからはここを読み込む　*/
+  /*　画面サイズが1000pxからはここを読み込む　*/
 
 header {
   width: 90vw;
@@ -227,6 +227,20 @@ header {
   width: 90vw;
   height: 3vw;
   margin: 0 auto;
+}
+
+p {
+  margin-top: 20px;
+  margin-left: 15px;
+  margin-left: 15px;
+}
+
+#index h1 {
+  font-size: 30px;
+  line-height: 180px;
+  color: #004ad3;
+  font-family: 'Bitter', serif;
+  margin-bottom: 10px;
 }
 
 .logo {
